[package]
name = "mistakes"
version = "0.1.0"
edition = "2021"


build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "weak"
path = "src/weak.rs"


[[example]]
name = "rust_call_c"
path = "src/rust_call_c.rs"



[dependencies]


