[workspace]
members = ["test_future_select", "timer_future"]

[workspace.package]
name = "future"
version = "0.1.0"
edition = "2024"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
