[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
create = "0.1.0"
html2md = "0.2.14"
reqwest = {version = "0.11.22", features = ["blocking"]}
# thread = "0.1.0"


[[bin]]
name = "pointer"
path = "src/pointer.rs"

[[bin]]
name = "03-geektime-rust"
path = "src/03-geektime-rust.rs"
