[package]
name = "data-structure"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slice1"
path = "src/slice1.rs"


[[bin]]
name = "slice2"
path = "src/slice2.rs"


[[bin]]
name = "slice3"
path = "src/slice3.rs"

[[bin]]
name = "slice4"
path = "src/slice4.rs"

[[bin]]
name = "iter"
path = "src/iter.rs"

[dependencies]
itertools = "0.10"
